projects/trial1/RegularExpressionGrammer
Regex ::= OrExpr CONCAT Regex | OrExpr
OrExpr ::= StarExpr OR OrExpr | StarExpr
StarExpr ::= IntermedExpr STAR | IntermedExpr QUESTION_MARK | IntermedExpr PLUS | IntermedExpr
IntermedExpr ::= BracketExpr | ParenExpr | CharExpr
BracketExpr ::= LBRACKET CARROT DashExpr RBRACKET | LBRACKET DashExpr RBRACKET
DashExpr ::= CharLitExpr DASH CharLitExpr DashExpr | CharExpr | EPSILON
ParenExpr ::= LPAREN Regex RPAREN
CharExpr ::= CharLitExpr CONCAT CharExpr | CharLitExpr
CharLitExpr ::= DOT | 0x0 | 0x1 | ..... | 0xff
